--- a/style.css
+++ b/style.css
@@ -138,3 +138,9 @@ body {
   height: 100%;
   object-fit: cover;
 }
+
+.navbar li.auth-buttons {
+  margin-left: auto;
+  display: flex;
+  gap: 15px;
+}
